# openglMinecraft

./: CMakeLists.txt  README.md
res/: main_crosshair_shader.fs  main_crosshair_shader.vs  main_line_shader.fs  main_line_shader.vs  main_shader.fs  main_shader.vs
src/: main.cpp
src/graphics/: LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  Texture.cpp  VoxelRenderer.cpp  VoxelRenderer.h
src/lighting/: LightSolver.cpp  Lightmap.cpp  Lightmap.h
src/voxels/: Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h
src/window/: Camera.cpp  events.cpp  events.h  window.cpp  window.h
